tests/NormalTests/paczka2/big_fuzzy/32851804.err
Error in line 3: uLxuh A997 69,7
Error in line 12: vGC3unt0O A967 205,0
Error in line 20: Guemw7Gk2 A786 242,6
Error in line 22: Guemw7Gk2 A238 2,2
Error in line 25: Guemw7Gk2 A967 54,2
Error in line 33: uLxuh A997 44,7
Error in line 46: A786 A967 27,15
Error in line 41: A786 A786 42,3
Error in line 49: TmF A786 160,7
Error in line 55: A786 A967 50,3
Error in line 53: MHN A238 64,3
Error in line 72: A786 A786 139,1
Error in line 73: A786 A238 27,4
Error in line 75: TmF A238 15,7
Error in line 71: lHeSXSHf A967 40,3
Error in line 80: Guemw7Gk2 A967 94,7
Error in line 81: Guemw7Gk2 A238 87,4
Error in line 78: lHeSXSHf A997 7,9
Error in line 90: TmF A786 6,1
Error in line 91: TmF A238 60,4
Error in line 79: A786 A786 99,5
Error in line 113: vGC3unt0O A997 4V5,4
Error in line 114: MHN A238 66,5
Error in line 123: TmF A967 94,3
Error in line 122: MHN A997 4,6
Error in line 128: uLxuh A238 15,0
Error in line 106: A786 A997 4,4
Error in line 139: lHeSXSHf A238 98,8
Error in line 104: vGC3unt0O A997 88,2
Error in line 133: A786 A786 35,4
Error in line 149: A786 A997 68,7
Error in line 153: A786 A967 50,8
Error in line 170: TmF A997 2,3
Error in line 171: vGC3unt0O A238 27,9
Error in line 178: TmF A997 93,3
Error in line 180: MHN A786 37,0
Error in line 177: vGC3unt0O A786 33,9
Error in line 187: MHN A238 98,8
Error in line 206: TmF A786 24,6
Error in line 214: MHN A967 84,46
Error in line 215: A786 A967 3,63
Error in line 211: A786 A238 85,2
Error in line 217: A786 A967 6,7
Error in line 227: MHN A997 31,2
Error in line 232: vGC3unt0O A786 82,2
Error in line 235: A786 A997 96,1
Error in line 246: vGC3unt0O A967 205,73
